--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,21 @@
   display: flex;
   align-items: center;
 }
+@media (min-width: 768px) {
+  .navbar__list {
+    margin-left: calc((100% - 648px) / 2);
+  }
+}
+@media (min-width: 1366px) {
+  .navbar__list {
+    margin-left: calc((100% - 1170px) / 2);
+  }
+}
+@media (min-width: 1680px) {
+  .navbar__list {
+    margin-left: calc((100% - 1400px) / 2);
+  }
+}
 .navbar__item {
   padding: 1rem 2rem;
 }
@@ -127,18 +142,20 @@
   row-gap: 0.25rem;
   grid-template-rows: repeat(10, 1fr);
 }
+@media (min-width: 1366px) {
+  #math_table .content .table {
+    width: 70%;
+  }
+}
 #math_table .content .table__item {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 1.25rem;
 }
 #math_table .content .table__item-item {
-  padding: 0.5rem;
-}
-@media (min-width: 1366px) {
-  #math_table .content .table__item-item {
-    padding: 0.5rem 2rem;
-  }
+  justify-self: center;
+  padding: 1rem 0.5rem;
+  margin: 0;
 }
 #math_table .content .table__item:nth-child(even) {
   background-color: hsl(0deg, 0%, 90%);
